force-app/main/default/objects/Instructor__c/fields/Bonus__c.field-meta.xml
<CustomField>
    <fullName>Bonus__c</fullName>
    <formula>IF( Salary__c &gt; 10000,  (Salary__c *20) / 100,  (Salary__c *10) / 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Enter your salary</inlineHelpText>
    <label>Bonus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>