force-app/main/default/objects/Instructor__c/fields/Instructor_ID__c.field-meta.xml
<CustomField>
    <fullName>Instructor_ID__c</fullName>
    <displayFormat>I-{000}</displayFormat>
    <inlineHelpText>Enter the Instructor ID</inlineHelpText>
    <label>Instructor ID</label>
    <type>AutoNumber</type>
</CustomField>