force-app/main/default/objects/Instructor__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <inlineHelpText>Enter your ratings for the Instructor</inlineHelpText>
    <label>Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>