force-app/main/default/objects/Instructor__c/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <inlineHelpText>Enter the salary of the Instructor</inlineHelpText>
    <label>Salary</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>