force-app/main/default/objects/Instructor__c/validationRules/Chech_Rating.validationRule-meta.xml
<ValidationRule>
    <fullName>Chech_Rating</fullName>
    <active>true</active>
    <description>Rating should be between 1 to 5</description>
    <errorConditionFormula>Rating__c &lt; 1 ||  Rating__c &gt; 5</errorConditionFormula>
    <errorMessage>Rating should be between 1 to 5</errorMessage>
</ValidationRule>