force-app/main/default/objects/Instructor__c/listViews/Experienced_Instructor.listView-meta.xml
<ListView>
    <fullName>Experienced_Instructor</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Year_of_Experience__c</field>
        <operation>greaterOrEqual</operation>
        <value>5</value>
    </filters>
    <label>Experienced Instructor</label>
</ListView>